Changed the inpatient link

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         Patient
                       </a>
                       <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="C:\Users\jp082\Music\VS_Code\inpatient.html">Inpatient</a>
+                        <a class="dropdown-item" href="https://github.com/Omondi-Jp/Group_project/blob/main/inpatient.html">Inpatient</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="C:\Users\jp082\Music\VS_Code\outpatient.html">Outpatient</a>
                       </div>
