--- a/index.html
+++ b/index.html
@@ -28,23 +28,23 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                   <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                      <div class="div"><a class="nav-link" href="C:\Users\jp082\Music\VS_Code\home.html">Home <span class="sr-only">(current)</span></a></div>
+                      <div class="div"><a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a></div>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="C:\Users\jp082\Music\VS_Code\services.html">Services</a>
+                      <a class="nav-link" href="services.html">Services</a>
                     </li>
                     <li class="nav-item dropdown">
                       <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Patient
                       </a>
                       <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="C:\Users\jp082\Music\VS_Code\inpatient.html">Inpatient</a>
+                        <a class="dropdown-item" href="inpatient.html">Inpatient</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="C:\Users\jp082\Music\VS_Code\outpatient.html">Outpatient</a>
+                        <a class="dropdown-item" href="outpatient.html">Outpatient</a>
                       </div>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="C:\Users\jp082\Music\VS_Code\about.html">About Us</a>
+                      <a class="nav-link" href="about.html">About Us</a>
                     </li>
                   </ul>
                   <form class="form-inline my-2 my-lg-0">
