--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <title>
 
         </title>
-        <link rel="stylesheet" href="C:\Users\jp082\Music\VS_Code\style.css">
+        <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         
             <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -14,7 +14,7 @@
     <body background-color="blue"> 
 
       <table width="100%" class="vision" ><tr><td>
-      <center><img src="C:\Users\jp082\Music\VS_Code\lg1.png"></center>
+      <center><img src="lg1.png"></center>
     </td></tr></table>
     <div bgcolor="blue"><h1 ><center><font color="red" size="5" face="Lucida Calligraphy">
           <marquee behavior="" direction=""> WELCOME TO TEXA MEDICAL CLINIC</marquee></font></center></h1> </div>
@@ -89,7 +89,7 @@
             OUR MOTTO <hr>
             We Listen,…..We Care! <hr>
             <br><br>
-            <img  width="100%" height="100%" src="C:\Users\jp082\Music\VS_Code\pic1.jfif"> </center> 
+            <img  width="100%" height="100%" src="pic1.jfif"> </center> 
             </td>
           <td></td>
           <td rowspan="3" class="vision" height="50%" width=""> <font color="yellow" face="algerain">
@@ -110,7 +110,7 @@
           
           </tr>
           <tr>
-          <td height="60%" width="" bgcolor="blue"><img src="C:\Users\jp082\Music\VS_Code\pic1c.png" height="60%" width="100%"></td>
+          <td height="60%" width="" bgcolor="blue"><img src="pic1c.png" height="60%" width="100%"></td>
           </tr>
           <tr>
           <td bgcolor="blue"></td>
