--- a/outpatient.html
+++ b/outpatient.html
@@ -25,7 +25,7 @@
 					<div class="collapse navbar-collapse" id="navbarSupportedContent">
 					  <ul class="navbar-nav mr-auto">
 						<li class="nav-item active">
-						  <div class="div"><a class="nav-link" href="C:\Users\jp082\Music\VS_Code\home.html">Home <span class="sr-only">(current)</span></a></div>
+						  <div class="div"><a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a></div>
 						</li>
 						<li class="nav-item">
 						  <a class="nav-link" href="C:\Users\jp082\Music\VS_Code\services.html">Services</a>
