--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<title>About Us</title>
-	<link rel="stylesheet" href="C:\Users\jp082\Music\VS_Code\style.css">
+	<link rel="stylesheet" href="styles.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         
             <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -10,7 +10,7 @@
 </head>
 <body>
 	<table width="100%" bgcolor="lightblue" ><tr><td>
-		<center><img src="C:\Users\jp082\Music\VS_Code\lg1.png"></center>
+		<center><img src="lg1.png"></center>
 	  </td></tr></table>
 	  <header>
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
