--- a/inpatient.html
+++ b/inpatient.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>In patient</title>
-    <link rel="stylesheet" href="C:\Users\jp082\Music\VS_Code\style.css">
+    <link rel="stylesheet" href="styles.css">
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -16,7 +16,7 @@
     </head>
     <body background-color="lightblue">
       <table width="100%" bgcolor="lightblue" ><tr><td>
-        <center><img src="C:\Users\jp082\Music\VS_Code\lg1.png"></center>
+        <center><img src="lg1.png"></center>
       </td></tr></table>
       <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -31,20 +31,20 @@
                   <div class="div"><a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a></div>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="C:\Users\jp082\Music\VS_Code\services.html">Services</a>
+                  <a class="nav-link" href="services.html">Services</a>
                 </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Patient
                   </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="C:\Users\jp082\Music\VS_Code\inpatient.html">Inpatient</a>
+                    <a class="dropdown-item" href="inpatient.html">Inpatient</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="C:\Users\jp082\Music\VS_Code\outpatient.html">Outpatient</a>
+                    <a class="dropdown-item" href="outpatient.html">Outpatient</a>
                   </div>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="C:\Users\jp082\Music\VS_Code\about.html">About Us</a>
+                  <a class="nav-link" href="about.html">About Us</a>
                 </li>
               </ul>
               <form class="form-inline my-2 my-lg-0">
