--- a/inpatient.html
+++ b/inpatient.html
@@ -29,10 +29,10 @@ rel="stylesheet">
     <header>
         <nav bgcolor="white">
             <div class="nav">
-                <div class="div"><a href="C:\Users\jp082\Music\VS_Code\jphome.html"> Home>>></a></div> 
-                <div class="div"><a href="C:\Users\jp082\Music\VS_Code\services.html">Services</a></div>
+                <div class="div"><a href="index.html"> Home>>></a></div> 
+                <div class="div"><a href="services.html">Services</a></div>
                 <div class="div"><a href="C:\Users\jp082\Music\VS_Code\">Patient details</a></div>
-                <div class="div"><a href="C:\Users\jp082\Music\VS_Code\about.html">About Us</a></div>
+                <div class="div"><a href="about.html">About Us</a></div>
 
             </div>
         </nav>
