--- a/about.html
+++ b/about.html
@@ -1,8 +1,9 @@
 <html>
     <head>
         <title>
-            texa home
+            texa about
         </title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="jp.css">
 		<link rel="stylesheet" href="about.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
