--- a/about.html
+++ b/about.html
@@ -1,9 +1,10 @@
-<html>
-    <head>
-        <title>
-            texa about
-        </title>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>texa home</title
         <link rel="stylesheet" href="jp.css">
 		<link rel="stylesheet" href="about.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
