--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>texa home</title
+	<title>texa home</title>
         <link rel="stylesheet" href="jp.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
