--- a/index.html
+++ b/index.html
@@ -1,8 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-	
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>texa home</title>
         <link rel="stylesheet" href="jp.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
