--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>texa about</title
+	<title>texa about</title>
         <link rel="stylesheet" href="jp.css">
 		<link rel="stylesheet" href="about.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
