--- a/services.html
+++ b/services.html
@@ -1,6 +1,6 @@
 <html lang="en">
 <head>
-	<title>texa services</title
+	<title>texa services</title>
         <link rel="stylesheet" href="jp.css">
 	<link rel="stylesheet" href="about.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
